# tictactoe-haskell

./: README.md  go  tictactoe-haskell.cabal  tictactoe.sublime-project
src/main/hs/: Game.hs  GameDescription.hs  GameDescriptionFromArgs.hs  MindAIRandom.hs  MindStdin.hs  MindStream.hs  TicTacToe.hs
src/main/hs/TicTacToe/: Game.hs  GameDescription.hs  GameDescriptionFromArgs.hs  MindAIRandom.hs  RenderToConsole.hs
tictactoe-haskell-cli/: tictactoe-haskell-cli.cabal
tictactoe-haskell-cli/src/: Main.hs
tictactoe-haskell-cli/src/TicTacToe/CLI/: GameDescriptionFromArgs.hs  RenderToConsole.hs
tictactoe-haskell-core/: tictactoe-haskell-core.cabal
tictactoe-haskell-core/src/TicTacToe/: Game.hs  GameDescription.hs  MindAIRandom.hs  MindStream.hs
tictactoe-haskell-web/: Gruntfile.js  index.html  package.json  tictactoe-haskell-web.cabal
tictactoe-haskell-web/src/: Main.hs
