name: tictactoe-haskell
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: Tic Tac Toe Game
data-dir: ""
 
executable tictactoe-haskell
    build-depends: QuickCheck -any, base -any, containers -any,
                   random -any, time -any
    main-is: TicTacToe.hs
    buildable: True
    extensions: ExistentialQuantification
    hs-source-dirs: src/main/hs
 