name: tictactoe-haskell-core
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
category: Game
-- description:
-- data-dir: ""

library
    build-depends:
        base -any,
        containers -any,
        random -any,
        time -any
    exposed-modules:
        TicTacToe.Game
        TicTacToe.GameDescription
    exposed: True
    buildable: True
    extensions: ExistentialQuantification
    hs-source-dirs: src
