name: tictactoe-haskell-web
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description:
data-dir: ""

executable tictactoe-haskell-web
    build-depends:
        base < 5,
        containers -any,
        haste-lib -any,
        random -any,
        tictactoe-haskell-core -any
    main-is: Main.hs
    buildable: True
    extensions: ExistentialQuantification
    hs-source-dirs: src
    ghc-options: --out=dist/ttt.js

